Se agrega servicios para logger y notificaciones

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StartedServices">
+        <service
+            android:name=".NotificationService"
+            android:exported="false"></service>
+
+        <activity android:name=".NotificationActivity" />
+
+        <service
+            android:name=".LoggerService"
+            android:exported="false" />
+
+        <activity android:name=".LoggerActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
